# TODO-CLI

./: .gitignore  pyproject.toml
tests/: test_todo_cli.py
todo_cli/: __init__.py  __main__.py  cli.py  config.py  database.py  todo.py
