[tool.poetry]
name = "todo-CLI"
version = "0.1.0"
description = ""
authors = ["Ezra Citron <ezracitron@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "0.3.2"
colorama = "0.4.4"
shellingham = "1.4.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
